[tool.poetry]
name = "trevorproxy"
version = "1.0.8"
description = "Rotate your source IP address via SSH proxies and other methods"
authors = ["TheTechromancer"]
license = "GPL-3.0"
repository = "https://github.com/blacklanternsecurity/TREVORproxy"
homepage = "https://github.com/blacklanternsecurity/TREVORproxy"

[tool.poetry.dependencies]
python = "^3.9"
sh = "^2.2.1"

[tool.poetry.scripts]
trevorproxy = 'trevorproxy.cli:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
